# web/swagger.json
@@ -439,6 +439,64 @@
                     }
                 ]
             }
+        },
+        "/registry/": {
+            "post": {
+                "tags": [
+                    "Partner Registry User"
+                ],
+                "summary": "Link partner and registry user",
+                "operationId": "postPartnerRegistryUser",
+                "parameters": [
+                    {
+                        "name": "partner registry user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/PartnerRegistryUser"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "the created link partner and registry user",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/Context"
+                                },
+                                {
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/PartnerRegistryUserComplete"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "404": {
+                        "description": "not found",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    },
+                    "500": {
+                        "description": "internal error",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
         }
     },
     "definitions": {
